--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==3.0.3
-Flask-PyMongo==2.3.0
-python-dotenv==1.0.1
+flask-pymongo==2.3.0
 Flask-WTF==1.2.1
-WTForms==3.1.2
+python-dotenv==1.0.1
 pandas==2.2.2
-itsdangerous==2.2.0
+bson==0.5.10
+gunicorn
+pymongo
+dnspython
